<resources>
    <string name="app_name">QuizApp</string>
    <string name="Q1">Nebraska appeared in which two bowl games during the 2000 calendar year?</string>
    <string name="Q2">Nebraska\'s DeJuan Groce accomplished which feat in the 2002 Rose Bowl?</string>
    <string name="Q3">Which rival football team did Nebraska defeat 36 straight times between 1969 and 2004?p</string>
    <string name="Q4">Which Nebraska Cornhusker received the 2007 Big 12 Offensive Player of the Year award?</string>
    <string name="Q5">How many 100-yard rushing games did quarterback Eric Crouch have in his Nebraska career?</string>
</resources>
